Minor bug fixes, if no MW SED is presents
Former-commit-id: a1a6c90767233e9f74304882da8ba3b3a2ef8910

--- a/vasca/examples/select_sources.ipynb
+++ b/vasca/examples/select_sources.ipynb
@@ -83,7 +83,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=0</i>\n",
-       "<table id=\"table140711206872224\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140370772617552\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>main_id</th><th>ra</th><th>dec</th><th>ra_prec</th><th>dec_prec</th><th>coo_err_maja</th><th>coo_err_mina</th><th>coo_err_angle</th><th>coo_qual</th><th>coo_wavelength</th><th>coo_bibcode</th><th>otype</th><th>otypes</th><th>distance_distance</th><th>distance_q</th><th>distance_unit</th><th>distance_merr</th><th>distance_perr</th><th>distance_method</th><th>distance_bibcode</th><th>match_distance</th><th>rvz_type</th><th>rvz_radvel</th><th>rvz_error</th><th>rvz_qual</th><th>rvz_wavelength</th><th>rvz_bibcode</th><th>z_value</th><th>sp_type</th><th>sp_qual</th><th>sp_bibcode</th><th>script_number_id</th><th>rg_src_id</th><th>simbad_match_id</th><th>ogrp</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th></th><th></th><th>mas</th><th>mas</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th><th></th><th>km / s</th><th>km / s</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes32</th><th>float64</th><th>float64</th><th>int16</th><th>int16</th><th>float32</th><th>float32</th><th>int16</th><th>bytes1</th><th>bytes1</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>float64</th><th>bytes1</th><th>bytes4</th><th>float64</th><th>float64</th><th>bytes8</th><th>bytes19</th><th>float32</th><th>bytes1</th><th>float64</th><th>float32</th><th>bytes1</th><th>bytes1</th><th>bytes32</th><th>float64</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>int32</th><th>int32</th><th>int32</th><th>bytes8</th></tr></thead>\n",
@@ -104,8 +104,8 @@
      "data": {
       "text/html": [
        "<div><i>Table length=3330</i>\n",
-       "<table id=\"table140711205120240\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>_q</th><th>ra</th><th>dec</th><th>Source</th><th>e_RA_ICRS</th><th>e_DE_ICRS</th><th>Plx</th><th>e_Plx</th><th>PM</th><th>pmRA</th><th>e_pmRA</th><th>pmDE</th><th>e_pmDE</th><th>RUWE</th><th>FG</th><th>e_FG</th><th>Gmag</th><th>FBP</th><th>e_FBP</th><th>BPmag</th><th>FRP</th><th>e_FRP</th><th>RPmag</th><th>BP-RP</th><th>RV</th><th>e_RV</th><th>Vbroad</th><th>GRVSmag</th><th>QSO</th><th>Gal</th><th>NSS</th><th>XPcont</th><th>XPsamp</th><th>RVS</th><th>EpochPh</th><th>EpochRV</th><th>MCMCGSP</th><th>MCMCMSC</th><th>And</th><th>Teff</th><th>logg</th><th>__Fe_H_</th><th>Dist</th><th>A0</th><th>HIP</th><th>PS1</th><th>SDSS13</th><th>SKYM2</th><th>TYC2</th><th>URAT1</th><th>AllWISE</th><th>APASS9</th><th>GSC23</th><th>RAVE5</th><th>_2MASS</th><th>RAVE6</th><th>RAJ2000</th><th>DEJ2000</th><th>PQSO</th><th>PGal</th><th>PSS</th><th>RPlx</th><th>VarFlag</th><th>o_Gmag</th><th>RFRP</th><th>RFBP</th><th>AG</th><th>E_BP-RP_</th><th>rg_src_id</th><th>match_distance</th><th>gaiadr3_match_id</th><th>Gmag_abs</th><th>Plx_dist</th><th>ogrp</th></tr></thead>\n",
+       "<table id=\"table140370666093248\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>_q</th><th>ra</th><th>dec</th><th>Source</th><th>e_RA_ICRS</th><th>e_DE_ICRS</th><th>Plx</th><th>e_Plx</th><th>PM</th><th>pmRA</th><th>e_pmRA</th><th>pmDE</th><th>e_pmDE</th><th>RUWE</th><th>FG</th><th>e_FG</th><th>Gmag</th><th>FBP</th><th>e_FBP</th><th>BPmag</th><th>FRP</th><th>e_FRP</th><th>RPmag</th><th>BP-RP</th><th>RV</th><th>e_RV</th><th>Vbroad</th><th>GRVSmag</th><th>QSO</th><th>Gal</th><th>NSS</th><th>XPcont</th><th>XPsamp</th><th>RVS</th><th>EpochPh</th><th>EpochRV</th><th>MCMCGSP</th><th>MCMCMSC</th><th>And</th><th>Teff</th><th>logg</th><th>__Fe_H_</th><th>Dist</th><th>A0</th><th>HIP</th><th>PS1</th><th>SDSS13</th><th>SKYM2</th><th>TYC2</th><th>URAT1</th><th>AllWISE</th><th>APASS9</th><th>GSC23</th><th>RAVE5</th><th>_2MASS</th><th>RAVE6</th><th>RAJ2000</th><th>DEJ2000</th><th>PQSO</th><th>PGal</th><th>PSS</th><th>RPlx</th><th>VarFlag</th><th>o_Gmag</th><th>RFRP</th><th>RFBP</th><th>AG</th><th>E_BP-RP</th><th>rg_src_id</th><th>match_distance</th><th>gaiadr3_match_id</th><th>Gmag_abs</th><th>Plx_dist</th><th>ogrp</th></tr></thead>\n",
        "<thead><tr><th></th><th>deg</th><th>deg</th><th></th><th>mas</th><th>mas</th><th>mas</th><th>mas</th><th>mas / yr</th><th>mas / yr</th><th>mas / yr</th><th>mas / yr</th><th>mas / yr</th><th></th><th></th><th></th><th>mag</th><th></th><th></th><th>mag</th><th></th><th></th><th>mag</th><th>mag</th><th>km / s</th><th>km / s</th><th>km / s</th><th>mag</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>K</th><th>log(cm.s**-2)</th><th></th><th>pc</th><th>mag</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>mag</th><th>mag</th><th></th><th>arcsec</th><th></th><th></th><th>pc</th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>float64</th><th>float64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>float64</th><th>float64</th><th>float32</th><th>float64</th><th>float32</th><th>float64</th><th>float64</th><th>float32</th><th>float64</th><th>float32</th><th>float32</th><th>float64</th><th>float32</th><th>float32</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>float64</th><th>float64</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>uint8</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int32</th><th>int64</th><th>int64</th><th>int32</th><th>bytes12</th><th>bytes15</th><th>bytes19</th><th>int32</th><th>bytes10</th><th>bytes16</th><th>bytes17</th><th>bytes21</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>bytes13</th><th>int16</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int32</th><th>float64</th><th>int32</th><th>float32</th><th>float64</th><th>bytes8</th></tr></thead>\n",
        "<tr><td>1</td><td>150.2</td><td>2.1</td><td>3836069006998531584</td><td>2.2872</td><td>3.3137</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>95.82888</td><td>1.689</td><td>20.733625</td><td>93.75</td><td>16.38</td><td>20.408556</td><td>130.9</td><td>9.985</td><td>19.455320</td><td>0.953236</td><td>--</td><td>--</td><td>--</td><td>--</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>--</td><td>110481501947501974</td><td>1237651753997304055</td><td>--</td><td>--</td><td>--</td><td>J100046.74+020404.4</td><td>--</td><td>N6SS000981</td><td>--</td><td>--</td><td>--</td><td>150.2</td><td>2.1</td><td>0.001869</td><td>0.000724</td><td>0.996765</td><td>--</td><td>NOT_AVAILABLE</td><td>79</td><td>13.11</td><td>5.725</td><td>--</td><td>--</td><td>41</td><td>0.6956587221689177</td><td>0</td><td>-100.0</td><td>--</td><td>none</td></tr>\n",
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "52c7472a-a628-488d-a500-dfbfaffa8610",
    "metadata": {},
    "outputs": [
@@ -215,36 +215,54 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "srcs_ids = [357455 ,322799 ,94932 ,87105 ,]\n",
+      "srcs_ids = [1521282 ,309137 ,214046 ,570092 ,70723 ,1747015 ,242634 ,1469861 ,1775540 ,1570009 ,1584655 ,192348 ,866068 ,160031 ,883278 ,805990 ,821390 ,221953 ,653072 ,124748 ,]\n",
       "\n",
-      "Total Nr. of sources: 4 \n",
+      "Total Nr. of sources: 20 \n",
       "\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><i>Table length=4</i>\n",
-       "<table id=\"table140711206112896\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<div><i>Table length=20</i>\n",
+       "<table id=\"table140373359794624\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>src_name</th><th>ra</th><th>dec</th><th>ogrp_gaiadr3</th><th>otype</th><th>sp_type</th><th>main_id</th><th>nr_det</th><th>flux</th><th>flux_cpval</th><th>flux_ne</th><th>Plx_dist</th><th>ls_peak_pval</th><th>ls_model_rchiq</th><th>VarFlag</th><th>Pwd</th><th>RPlx</th><th>rg_src_id</th></tr></thead>\n",
-       "<thead><tr><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th>1e-06 Jy</th><th></th><th></th><th>pc</th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
+       "<thead><tr><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th><th></th><th>1e-06 Jy</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes24</th><th>float64</th><th>float64</th><th>bytes8</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>int32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32</th><th>float32</th><th>float32</th><th>bytes32</th><th>float32</th><th>float32</th><th>int32</th></tr></thead>\n",
-       "<tr><td>1UVA J04917.1-252556.5</td><td>12.321346896575122</td><td>-25.432354111852234</td><td>WD*</td><td>WD*</td><td>DA</td><td>GALEX J004917.1-252556</td><td>11 .. 1</td><td>73.65471 .. 41.309494</td><td>1.0632669e-08 .. -1.0</td><td>0.04259176 .. --</td><td>99.60556</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>1.0</td><td>39.4121</td><td>357455</td></tr>\n",
-       "<tr><td>1UVA J22222.9-05025.9</td><td>35.59527907918115</td><td>-0.8405203013145769</td><td>WD*</td><td>WD*</td><td>DA</td><td>GALEX J022222.7-005027</td><td>1 .. 9</td><td>26.544712 .. 10.316418</td><td>-1.0 .. 2.1149104e-07</td><td>-- .. 0.18395825</td><td>371.59525</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>0.988086</td><td>7.7587</td><td>322799</td></tr>\n",
-       "<tr><td>1UVA J221828.6-00012.0</td><td>334.6190008630954</td><td>-0.00334150877900888</td><td>WD*</td><td>WD*</td><td>DAH</td><td>PB  5130</td><td>7 .. 2</td><td>121.26045 .. 42.269413</td><td>2.6516346e-07 .. 0.00661471</td><td>0.04008117 .. 0.07513158</td><td>121.74485</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>0.994004</td><td>48.3832</td><td>94932</td></tr>\n",
-       "<tr><td>1UVA J231536.9+192449.5</td><td>348.90356888412066</td><td>19.41375937325458</td><td>WD*</td><td>WD?</td><td></td><td>SDSS J231536.88+192448.9</td><td>15 .. 4</td><td>126.54993 .. 38.594788</td><td>7.254814e-15 .. 0.4565092</td><td>0.0423359 .. 0.055154238</td><td>168.92747</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>0.995758</td><td>39.2334</td><td>87105</td></tr>\n",
+       "<tr><td>1UVA J64716.1-361135.0</td><td>101.81710210989921</td><td>-36.193058721758696</td><td>Star*</td><td>PM*</td><td></td><td>CD-36  3152</td><td>17 .. -1</td><td>538.3593 .. -1.0</td><td>0.0 .. -1.0</td><td>0.04 .. --</td><td>478.86</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>-1.0</td><td>164.21</td><td>1521282</td></tr>\n",
+       "<tr><td>1UVA J24936.5-244414.0</td><td>42.4020294028045</td><td>-24.7372359958571</td><td>none</td><td>PM*</td><td>M0.5</td><td>LP  830-44</td><td>19 .. 2</td><td>7.402895 .. 2.1757395</td><td>0.0 .. 0.85363716</td><td>0.42 .. --</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>none</td><td>-1.0</td><td>-1.0</td><td>309137</td></tr>\n",
+       "<tr><td>1UVA J110206.5-225229.4</td><td>165.52697545737453</td><td>-22.87482653838341</td><td>none</td><td>PM*</td><td>K5Ve</td><td>RX J1102.1-2252</td><td>20 .. 20</td><td>79.83186 .. 9.882956</td><td>0.0 .. 0.0</td><td>0.67 .. 1.44</td><td>56.52</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>-1.0</td><td>875.09</td><td>214046</td></tr>\n",
+       "<tr><td>1UVA J194443.4-74959.3</td><td>296.18095254478396</td><td>-7.833144728280071</td><td>none</td><td>PM*</td><td></td><td>GUVV J194443.4-074959.5</td><td>14 .. -1</td><td>26.761148 .. -1.0</td><td>0.0 .. -1.0</td><td>0.27 .. --</td><td>55.04</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>-1.0</td><td>225.17</td><td>570092</td></tr>\n",
+       "<tr><td>1UVA J22635.2-50518.1</td><td>36.64679343377384</td><td>-5.088367301961614</td><td>none</td><td>PM*</td><td></td><td>2XLSSd J022635.2-050518</td><td>7 .. 1</td><td>3.4287777 .. 12.545136</td><td>0.0 .. -1.0</td><td>3.55 .. --</td><td>118.32</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>-1.0</td><td>218.0</td><td>70723</td></tr>\n",
+       "<tr><td>1UVA J21829.9-45513.5</td><td>34.62451156641868</td><td>-4.920414447220848</td><td>none</td><td>PM*</td><td>M1</td><td>2MASS J02182991-0455137</td><td>-1 .. 16</td><td>-1.0 .. 2.8671021</td><td>-1.0 .. 5.8832773e-25</td><td>-- .. 1.06</td><td>91.02</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>-1.0</td><td>588.8</td><td>1747015</td></tr>\n",
+       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
+       "<tr><td>1UVA J143735.2+345907.6</td><td>219.39646966499114</td><td>34.98545123380675</td><td>Star*</td><td>PM*</td><td></td><td>2MASS J14373514+3459077</td><td>5 .. -1</td><td>2.8333015 .. -1.0</td><td>4.601553e-11 .. -1.0</td><td>0.88 .. --</td><td>130.16</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>-1.0</td><td>41.48</td><td>883278</td></tr>\n",
+       "<tr><td>1UVA J160659.0+532534.3</td><td>241.7457450938821</td><td>53.42620231130154</td><td>none</td><td>PM*</td><td></td><td>2MASS J16065902+5325335</td><td>12 .. -1</td><td>3.1207738 .. -1.0</td><td>0.0 .. -1.0</td><td>2.09 .. --</td><td>56.48</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>-1.0</td><td>932.28</td><td>805990</td></tr>\n",
+       "<tr><td>1UVA J160322.0+551052.2</td><td>240.84160854742194</td><td>55.18115560313473</td><td>none</td><td>PM*</td><td>G0</td><td>HD 144465</td><td>-1 .. 3</td><td>-1.0 .. 156.63501</td><td>-1.0 .. 8.3920045e-11</td><td>-- .. 0.11</td><td>93.76</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>-1.0</td><td>627.87</td><td>821390</td></tr>\n",
+       "<tr><td>1UVA J105130.9+573440.2</td><td>162.87889634456937</td><td>57.577835480177775</td><td>none</td><td>PM*</td><td>M5V</td><td>[BCH2008] 444</td><td>20 .. 1</td><td>10.886024 .. 3.4589686</td><td>0.0 .. -1.0</td><td>0.48 .. --</td><td>55.32</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>-1.0</td><td>57.73</td><td>221953</td></tr>\n",
+       "<tr><td>1UVA J171944.0+581528.3</td><td>259.93349533816985</td><td>58.25784829849</td><td>Star*</td><td>PM*</td><td></td><td>2MASS J17194399+5815284</td><td>5 .. -1</td><td>2.4079738 .. -1.0</td><td>1.4947734e-17 .. -1.0</td><td>1.45 .. --</td><td>33.92</td><td>-1.0</td><td>-1.0</td><td>NOT_AVAILABLE</td><td>-1.0</td><td>1017.41</td><td>653072</td></tr>\n",
+       "<tr><td>1UVA J171043.3+595728.2</td><td>257.68030204204837</td><td>59.95783218682287</td><td>Star*</td><td>PM*</td><td>G8V</td><td>2MASS J17104326+5957282</td><td>30 .. -1</td><td>76.504845 .. -1.0</td><td>5.107331e-07 .. -1.0</td><td>0.03 .. --</td><td>129.98</td><td>0.097229466</td><td>1.727266</td><td>NOT_AVAILABLE</td><td>-1.0</td><td>660.42</td><td>124748</td></tr>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "<Table length=4>\n",
+       "<Table length=20>\n",
        "        src_name                ra         ...   RPlx  rg_src_id\n",
        "                               deg         ...                  \n",
        "        bytes24              float64       ... float32   int32  \n",
        "----------------------- ------------------ ... ------- ---------\n",
-       " 1UVA J04917.1-252556.5 12.321346896575122 ... 39.4121    357455\n",
-       "  1UVA J22222.9-05025.9  35.59527907918115 ...  7.7587    322799\n",
-       " 1UVA J221828.6-00012.0  334.6190008630954 ... 48.3832     94932\n",
-       "1UVA J231536.9+192449.5 348.90356888412066 ... 39.2334     87105"
+       " 1UVA J64716.1-361135.0 101.81710210989921 ...  164.21   1521282\n",
+       " 1UVA J24936.5-244414.0   42.4020294028045 ...    -1.0    309137\n",
+       "1UVA J110206.5-225229.4 165.52697545737453 ...  875.09    214046\n",
+       " 1UVA J194443.4-74959.3 296.18095254478396 ...  225.17    570092\n",
+       "  1UVA J22635.2-50518.1  36.64679343377384 ...   218.0     70723\n",
+       "  1UVA J21829.9-45513.5  34.62451156641868 ...   588.8   1747015\n",
+       "                    ...                ... ...     ...       ...\n",
+       "1UVA J143735.2+345907.6 219.39646966499114 ...   41.48    883278\n",
+       "1UVA J160659.0+532534.3  241.7457450938821 ...  932.28    805990\n",
+       "1UVA J160322.0+551052.2 240.84160854742194 ...  627.87    821390\n",
+       "1UVA J105130.9+573440.2 162.87889634456937 ...   57.73    221953\n",
+       "1UVA J171944.0+581528.3 259.93349533816985 ... 1017.41    653072\n",
+       "1UVA J171043.3+595728.2 257.68030204204837 ...  660.42    124748"
       ]
      },
      "metadata": {},
@@ -253,13 +271,13 @@
    ],
    "source": [
     "# Make selection\n",
-    "sel_otype = rc.tt_sources[\"otype\"] ==  \"SN*\" #\"RR*\"# \"No*\"#\"HS?\" #\"BS*\" #\"PM*\" # # \"SN*\" #\"EB*\"\n",
+    "sel_otype = rc.tt_sources[\"otype\"] ==  \"PM*\" #\"SN*\" #\"RR*\"# \"No*\"#\"HS?\" #\"BS*\" # # \"SN*\" #\"EB*\"\n",
     "sel_otypes =   (rc.tt_sources[\"Pwd\"] >0.9) # (rc.tt_sources[\"otype\"] ==  \"WD?\")  + #  + (rc.tt_sources[\"RPlx\"]>4) (rc.tt_sources[\"otype\"] ==\"WD*\")*(rc.tt_sources[\"sp_type\"] !=\"none\")+\n",
     "sel_flux_nxv = rc.tt_sources[\"flux_nxv\"][:,0]>2\n",
     "sel_flux_hr = rc.tt_sources[\"hr\"]>2\n",
     "sel_src_id = rc.tt_sources[\"rg_src_id\"]==15179\n",
     "sel_period = (rc.tt_sources[\"ls_peak_pval\"]>-0.5) * (rc.tt_sources[\"ls_peak_pval\"]<0.000000573303) * (rc.tt_sources[\"ls_model_rchiq\"]<1.1)# # 3 sigma 0.002699796063, 4 sigma 0.000063342484, 5 sigma 0.000000573303\n",
-    "sel_srcs =  sel_otypes #sel_period #sel_otypes  #sel_src_id  #sel_flux_nxv #sel_otype # sel_flux_nxv_fuv # sel_flux_hr#\n",
+    "sel_srcs =  sel_otype #sel_period #sel_otypes  #sel_src_id  #sel_flux_nxv #sel_otype # sel_flux_nxv_fuv # sel_flux_hr#\n",
     "\n",
     "#Print oout list of source IDs to be used for further use, e.g. in inspect_sources.ipynb\n",
     "print(\"\\nsrcs_ids = [\", end=\"\")\n",
