--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -31,14 +31,12 @@
     "show_skymaps = False\n",
     "show_sed = True\n",
     "force_show_LS = False\n",
-    "load_src_from_file = True\n",
+    "load_src_from_file = False\n",
     "save_figs = True\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
-    "srcs_ids = []\n",
-    "srcs_ids = [65591 ,167210 ,] # ALL_10-800 - SN\n",
-    "srcs_ids = [357455 ,407685 ,322799 ,94932 ,87105 ,]# ALL_10-800 - WD\n",
-    "srcs_ids = [357455 ,94932]# ALL_10-800 - WD paper"
+    "srcs_ids = [357455 ,94932]# ALL_10-800 - WD paper\n",
+    "srcs_ids = [1521282 ,309137 ,214046 ,570092 ,70723 ,1747015 ,242634 ,1469861 ,1775540 ,1570009 ,1584655 ,192348 ,866068 ,160031 ,883278 ,805990 ,821390 ,221953 ,653072 ,124748 ,] # PM*"
    ]
   },
   {
@@ -116,12 +114,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "760568c598814a1b913197b7a5c99ea6",
+       "model_id": "592f3f5a3ae048d0a68fd24a6d34d049",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(357455, 94932), value=357455), Output()), _do…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(1521282, 309137, 214046, 570092, 70723, 17470…"
       ]
      },
      "execution_count": 3,
@@ -212,12 +210,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c5c61be87994e69ad14298f54b0b935",
+       "model_id": "9f7e0c811e4245358464158a63b4f702",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='block_nr', max=0), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=2, description='block_nr', max=4), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
