--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -36,7 +36,8 @@
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
     "srcs_ids = [357455 ,94932]# ALL_10-800 - WD paper\n",
-    "srcs_ids = [1521282 ,309137 ,214046 ,570092 ,70723 ,1747015 ,242634 ,1469861 ,1775540 ,1570009 ,1584655 ,192348 ,866068 ,160031 ,883278 ,805990 ,821390 ,221953 ,653072 ,124748 ,] # PM*"
+    "srcs_ids = [1521282 ,309137 ,214046 ,570092 ,70723 ,1747015 ,242634 ,1469861 ,1775540 ,1570009 ,1584655 ,192348 ,866068 ,160031 ,883278 ,805990 ,821390 ,221953 ,653072 ,124748 ,] # PM*\n",
+    "srcs_ids = [357455] # Massive pulsating WD"
    ]
   },
   {
@@ -114,12 +115,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "592f3f5a3ae048d0a68fd24a6d34d049",
+       "model_id": "b8d681581c0548e0830bb714b8d1bf05",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='rg_src_id', options=(1521282, 309137, 214046, 570092, 70723, 17470…"
+       "interactive(children=(Dropdown(description='rg_src_id', options=(357455,), value=357455), Output()), _dom_clas…"
       ]
      },
      "execution_count": 3,
@@ -142,7 +143,7 @@
     "def display_src_info(rg_src_id=0):\n",
     "\n",
     "    #Get source\n",
-    "    tc_src = rg.get_src_from_id(rg_src_id, load_from_file = load_src_from_file, add_sed=show_sed,add_gphoton=False, add_spectrum=show_sed)\n",
+    "    tc_src = rg.get_src_from_id(rg_src_id, load_from_file = load_src_from_file, add_sed=show_sed,add_gphoton=True, add_spectrum=show_sed)\n",
     "\n",
     "    #Prepare figure\n",
     "\n",
@@ -210,12 +211,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f7e0c811e4245358464158a63b4f702",
+       "model_id": "0622ec7b261a4f01ab07bd1761040487",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=2, description='block_nr', max=4), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=0, description='block_nr', max=0), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 4,
