Adding gphoton fine lc
Former-commit-id: b0c2defe719c727d09415133dfe7f8219d50c858

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -28,10 +28,10 @@
     "region_name = \"ALL_10-800\"  #\"TDS\" #\"CAINGSGII_10-800\"  #\"TDS\" #\"WD\" #\"MDIS_10-800\" # \"TDS_ELAISN1\"\n",
     "region_dir_name = \"./vasca_pipeline/\"+region_name+\"/\"\n",
     "region_fname = region_dir_name+\"region_\"+region_name+\"_cat.fits\"\n",
-    "show_skymaps = False\n",
+    "show_skymaps = True\n",
     "show_sed = True\n",
     "force_show_LS = False\n",
-    "load_src_from_file = False\n",
+    "load_src_from_file = True\n",
     "save_figs = True\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
@@ -115,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8d681581c0548e0830bb714b8d1bf05",
+       "model_id": "130903ae67ed486ba67f5fa0b5294957",
        "version_major": 2,
        "version_minor": 0
       },
@@ -211,7 +211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0622ec7b261a4f01ab07bd1761040487",
+       "model_id": "fa5f2e6cedb44abb87b7599223b0b9b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,7 +254,22 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3e1585a5a25240debc222180fccfd273",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(357455,), value=357455), IntSlider(va…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def plot_sky_src(rg_src_id=0, fd_idx=0, vis_idx = -1):\n",
     "    \n",
