Added split LC notebook
Former-commit-id: 7d23f4ef0a9d68a993f94a95e7bb2a6737a1a140

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "nr_srcs = len(tt_srcs)\n",
     "tt_srcs.add_index(\"rg_src_id\")\n",
-    "#display(tt_srcs)"
+    "#display(rg._table_names)"
    ]
   },
   {
@@ -115,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "130903ae67ed486ba67f5fa0b5294957",
+       "model_id": "a8c8a1282572417ba4915cf505a5edab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -184,7 +184,7 @@
     "            else:\n",
     "                display(tc_src.__dict__[table_name][col_names])\n",
     "    \n",
-    "    tc_src.tt_sed.pprint_all()\n",
+    "    tc_src.tt_source_lc.pprint_all()\n",
     "\n",
     "widgets.interactive(display_src_info, rg_src_id=tt_srcs[\"rg_src_id\"])\n",
     "#2572986 specially clear example"
@@ -211,7 +211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa5f2e6cedb44abb87b7599223b0b9b1",
+       "model_id": "de1c5168ea5a48e894b42f805760bcd8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -258,7 +258,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e1585a5a25240debc222180fccfd273",
+       "model_id": "a7f8913b2c89443c98fe2519f252ab17",
        "version_major": 2,
        "version_minor": 0
       },
