Plot improvements for paper
Former-commit-id: fb7af75ba1a4372ec6f72017596c873ac20008a6

--- a/vasca/examples/inspect_MVWD.ipynb
+++ b/vasca/examples/inspect_MVWD.ipynb
@@ -14,6 +14,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec3a24d0-06e7-4d24-8bd9-2a2dc011e92c",
+   "metadata": {},
+   "source": [
+    "From https://arxiv.org/pdf/2106.07669.pdf\n",
+    "\n",
+    "𝐴𝐺 = 0.835𝐴𝑉 (31)\n",
+    "𝐴𝐺BP = 1.139𝐴𝑉 (32)\n",
+    "𝐴𝐺RP = 0.650𝐴𝑉 (33)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fa7d225a-f7cb-4db6-961a-f600a5d7e3bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00835 0.017890000000000003\n"
+     ]
+    }
+   ],
+   "source": [
+    "AV = 0.01\n",
+    "AG= 0.835*AV\n",
+    "dBPmRp = (1.139+0.650)*AV\n",
+    "print(AG,dBPmRp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4210505a-12f9-4a8b-9bfc-5819148cf7cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Integrating extinction map (this might take a couple of minutes)...\n",
+      "Optimizing map for querying (this might take a couple of seconds)...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.007744406055593374\n"
+     ]
+    }
+   ],
+   "source": [
+    "from __future__ import print_function\n",
+    "from astropy.coordinates import SkyCoord\n",
+    "\n",
+    "from dustmaps.config import config\n",
+    "config['data_dir'] = './resources/dustmaps'\n",
+    "from dustmaps.edenhofer2023 import Edenhofer2023Query\n",
+    "import astropy.units as units\n",
+    "\n",
+    "coords = SkyCoord(12.3*units.deg, -25.4*units.deg,\n",
+    "                  distance=99.6056*units.pc, frame=\"icrs\")\n",
+    "edenhofer = Edenhofer2023Query(integrated=True)\n",
+    "\n",
+    "ebv = edenhofer(coords)\n",
+    "\n",
+    "print(ebv)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "056091a4-9cd2-4336-8379-64c4fb66b333",
@@ -137,8 +210,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8d87882c-3ab2-42fd-8939-cc8b5bb4dfa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Configuration file not found:\n",
+      "\n",
+      "    /home/buehler/.dustmapsrc\n",
+      "\n",
+      "To create a new configuration file in the default location, run the following python code:\n",
+      "\n",
+      "    from dustmaps.config import config\n",
+      "    config.reset()\n",
+      "\n",
+      "Note that this will delete your configuration! For example, if you have specified a data directory, then dustmaps will forget about its location.\n",
+      "Downloading https://zenodo.org/record/8187943/files/mean_and_std_healpix.fits ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  3.0 GiB of 3.0 GiB |   5.7 MiB/s |################### | \u001b[38;2;0;255;0m 99%\u001b[39m | ETA:   0:00:0049"
+     ]
+    }
+   ],
+   "source": [
+    "# from dustmaps.config import config\n",
+    "# config['data_dir'] = './resources/dustmaps'\n",
+    "# import dustmaps.edenhofer2023\n",
+    "# dustmaps.edenhofer2023.fetch()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb2b17f4-f5f9-4aea-b6cd-7fce0605d31b",
    "metadata": {},
    "outputs": [],
    "source": []
