--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -31,7 +31,7 @@
     "show_skymaps = True\n",
     "show_sed = True\n",
     "force_show_LS = False\n",
-    "load_src_from_file = True\n",
+    "load_src_from_file = False\n",
     "save_figs = True\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
     "\n",
@@ -115,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8c8a1282572417ba4915cf505a5edab",
+       "model_id": "162e64a51fdf459b9ed3f415b40356dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,7 +137,7 @@
     "disp_tt_gaiadr3 = ['ogrp',\"Plx_dist\",\"VarFlag\", \"o_Gmag\",'Gmag_abs','BP-RP','ra','dec','Source','e_RA_ICRS','e_DE_ICRS','Plx','e_Plx','PM','pmRA','e_pmRA','pmDE','e_pmDE','RUWE','FG','e_FG','Gmag','FBP','e_FBP','BPmag','FRP','e_FRP','RPmag','RV','e_RV',\n",
     "                   'Vbroad','GRVSmag','QSO','Gal','NSS','XPcont','XPsamp','RVS','EpochPh','EpochRV','MCMCGSP','MCMCMSC','And','Teff','logg','__Fe_H_','Dist','A0','HIP','PS1','SDSS13','SKYM2','TYC2','URAT1','AllWISE','APASS9',\n",
     "                   'GSC23','RAVE5','_2MASS','RAVE6','RAJ2000','DEJ2000','PQSO','PGal','PSS','RPlx','match_distance','gaiadr3_match_id'] #,'_q',,'rg_src_id'\n",
-    "dd_tab_col = {\"tt_sources\":disp_tt_sources, \"tt_maincat\":[], \"tt_simbad\":disp_tt_simbad, \"tt_gaiadr3\":disp_tt_gaiadr3,\"tt_gf_cat\":[],\"tt_gphoton_stats\":[], \"tt_fields\":[]}\n",
+    "dd_tab_col = {\"tt_sources\":disp_tt_sources, \"tt_gaiaedr3_wd\":[], \"tt_simbad\":disp_tt_simbad, \"tt_gaiadr3\":disp_tt_gaiadr3,\"tt_gf_cat\":[],\"tt_gphoton_stats\":[], \"tt_fields\":[]}\n",
     "\n",
     "\n",
     "def display_src_info(rg_src_id=0):\n",
@@ -185,6 +185,7 @@
     "                display(tc_src.__dict__[table_name][col_names])\n",
     "    \n",
     "    tc_src.tt_source_lc.pprint_all()\n",
+    "    print(np.mean(tc_src.tt_source_lc[\"time_bin_size\"]))\n",
     "\n",
     "widgets.interactive(display_src_info, rg_src_id=tt_srcs[\"rg_src_id\"])\n",
     "#2572986 specially clear example"
@@ -211,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de1c5168ea5a48e894b42f805760bcd8",
+       "model_id": "f8edb72d62a54f77a5133151ced35c08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -258,7 +259,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7f8913b2c89443c98fe2519f252ab17",
+       "model_id": "011366b944c54eaeb66034705f672c77",
        "version_major": 2,
        "version_minor": 0
       },
